--- a/Mini Projects/Level1/LandingPage/projects.html
+++ b/Mini Projects/Level1/LandingPage/projects.html
@@ -231,7 +231,7 @@
                         <span class="level-badge level-1">Level 1</span>
                         <h3>Temperature Converter</h3>
                         <p>A simple tool to convert temperatures between Celsius, Fahrenheit, and Kelvin.</p>
-                        <a href="../TemperatureConverter/index.html" class="project-link">View Project →</a>
+                        <a href="https://mini-projects-bcrd.vercel.app/" class="project-link">View Project →</a>
                     </div>
                 </div>
 
@@ -241,7 +241,7 @@
                         <span class="level-badge level-1">Level 1</span>
                         <h3>Personal Portfolio</h3>
                         <p>A responsive portfolio website showcasing my skills, projects, and contact information.</p>
-                        <a href="../Portfolio/index.html" class="project-link">View Project →</a>
+                        <a href="https://mini-projects-cl92.vercel.app/" class="project-link">View Project →</a>
                     </div>
                 </div>
 
@@ -252,7 +252,7 @@
                         <span class="level-badge level-2">Level 2</span>
                         <h3>Calculator</h3>
                         <p>A functional calculator with basic mathematical operations and clean UI.</p>
-                        <a href="../../Level2/Calculator/index.html" class="project-link">View Project →</a>
+                        <a href="https://mini-projects-kluv.vercel.app/" class="project-link">View Project →</a>
                     </div>
                 </div>
 
@@ -262,7 +262,7 @@
                         <span class="level-badge level-2">Level 2</span>
                         <h3>Login Authentication</h3>
                         <p>A secure login system with form validation and user authentication.</p>
-                        <a href="../../Level2/LoginAuth/index.html" class="project-link">View Project →</a>
+                        <a href="https://mini-projects-hwe2.vercel.app/" class="project-link">View Project →</a>
                     </div>
                 </div>
 
@@ -272,7 +272,7 @@
                         <span class="level-badge level-2">Level 2</span>
                         <h3>To-Do App</h3>
                         <p>A task management app to add, complete, and delete tasks with local storage.</p>
-                        <a href="../../Level2/TodoApp/index.html" class="project-link">View Project →</a>
+                        <a href="https://mini-projects-6vwk.vercel.app/" class="project-link">View Project →</a>
                     </div>
                 </div>
 
@@ -283,7 +283,7 @@
                         <span class="level-badge level-3">Level 3</span>
                         <h3>Pizza Delivery</h3>
                         <p>A full-featured pizza delivery website with ordering system and modern UI.</p>
-                        <a href="../../Level3/PizzaDelivery/frontend/index.html" class="project-link">View Project →</a>
+                        <a href="https://mini-projects-hcmt.vercel.app/" class="project-link">View Project →</a>
                     </div>
                 </div>
             </div>
@@ -296,3 +296,4 @@
     </footer>
 </body>
 </html>
+
