--- a/Mini Projects/Level1/LandingPage/projects.html
+++ b/Mini Projects/Level1/LandingPage/projects.html
@@ -275,6 +275,18 @@
                         <a href="https://mini-projects-6vwk.vercel.app/" class="project-link">View Project →</a>
                     </div>
                 </div>
+                
+
+                 <div class="project-card">
+                    <div class="project-image">✅</div>
+                    <div class="project-info">
+                        <span class="level-badge level-2">Level 2</span>
+                        <h3>Booking Portal App</h3>
+                        <p>CRUD System</p>
+                        <a href="https://booking-portal-plum.vercel.app/" class="project-link">View Project →</a>
+                    </div>
+                </div>
+                
 
                 <!-- Level 3 Projects -->
                 <div class="project-card">
@@ -296,4 +308,5 @@
     </footer>
 </body>
 </html>
+
 
